--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,14 +7,14 @@
     <string name="searchview">搜索</string>
     <string name="userpref">userpref</string>
     <string name="actionmore">actionmore</string>
-    <string name="data_path">/sdcard/SuperMap/MapData/MapData.smwu</string>
-    <string name="license_path">/sdcard/SuperMap/license/</string>
-    <string name="temp_path">/sdcard/SuperMap/temp/</string>
-    <string name="cache_path">/sdcard/SuperMap/WebCache/</string>
+    <string name="data_path">/SuperMap/MapData/MapData.smwu</string>
+    <string name="license_path">/SuperMap/license/</string>
+    <string name="temp_path">/SuperMap/temp/</string>
+    <string name="cache_path">/SuperMap/WebCache/</string>
     <string name="actionlocation">定位</string>
     <string name="detail">详情</string>
     <string name="location">我的位置(精度：10米)</string>
-    <string name="locationdetail">上海师范大学，旅游学院</string>
-    <string name="searcharround">周边查询</string>
+    <string name="geocoding">上海师范大学，旅游学院</string>
+    <string name="querysurrounding">周边查询</string>
 
 </resources>
