add widget but it has bug

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="btnmap">地图</string>
     <string name="btnlist">列表</string>
     <string name="swtquery">查询结果</string>
+    <string name="widgettitle">地图小部件</string>
 
 </resources>
